(feat):[PIDM-521] slack ecommerce transactions status report (#20)
* feat: implemented new aggregation and block for report

* fix: fixed test cases

* fix: changed name and added missing parts

* chore: test log messages

* chore: changed pipeline to make it verbose due to error

* chore: try to set default env vars for pipeline fail

* chore: test - try to get additional logs

* chore: test - resetting singleton at each test

* chore: test - some logging and trying to avoid singleton problem

* chore: test - some logging and trying to avoid singleton problem

* chore: test - some logging and trying to avoid singleton problem

* chore: try reflection

* chore: small refactor for helpdesk client

* chore: remove system log

* chore: schedule change

* chore: added test to improve coverage

* chore: refactor code using tables and filtering out 0s rows

* chore: removing logs

* chore: added TODOs + test failure

* fix: fixing a specific test that will be the base for other tests to fix

* chore: fixed existing tests

* chore: added tests to improve coverage

* chore: coverage for ecommerce helpdesk client

* chore: coverage for ecommerce status aggregation client

* chore: restore pom

* chore: modify pom for sonar

* chore: modify pom for sonar

* chore: added tests to improve coverage

* chore: added tests to improve coverage

* chore: messages filtered by client id and create a block for the client id itself

* chore: small fixes

* chore: fixed test cases and added comment

* chore: added enum and replaced old array + fixed tests

* chore: added javadoc

* chore: spotless

* feat: [PIDM-521] add non mapped status fallback to IN CORSO

* feat: [PIDM-521] address sonarcloud code smells

* feat: [PIDM-521] address sonarcloud code smells

* feat: [PIDM-521] update unit tests

* feat: [PIDM-521] extract methods to reduce complexity to <15

* feat: [PIDM-521] address sonarcloud code smells

* feat: [PIDM-521] update unit tests

* trigger pipeline

* feat: [PIDM-521] ad